--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="home-content">
         <h3>Hello, It's Me👋</h3>
         <h1>Harsh Panchal</h1>
-        <h3>And I'm a <span class="multiple-text"></span></h3>
+        <h3><span class="multiple-text"></span></h3>
         <p>
           "Transforming Ideas into Reality, Crafting Seamless Digital
           Experiences with Code and Creativity."
