--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               register, login, and chat with others in real-time.
             </p>
             <a
-              href=" https://developerharshpanchal.github.io/MERN-chat/"
+              href="https://developerharshpanchal.github.io/MERN-chat/"
               target="_blank"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -374,21 +374,20 @@
         </div>
         <div class="portfolio-box">
           <img src="images/portfolio 3.jpg" alt="" />
-          <h3>student-registration-system</h3>
+          <h3>Registration-system</h3>
           <div class="portfolio-layer">
-            <h4>student-registration-system</h4>
+            <h4>Register-system</h4>
             <p>
-              Includes form validation, data editing, deleting, and localStorage
-              integration for persistent data management.
+              Includes form data editing, deleting, and localStorage integration
+              for persistent data management.
             </p>
             <a
-              href=" https://developerharshpanchal.github.io/student-registration-system/"
+              href="https://developerharshpanchal.github.io/student-registration-system/"
               target="_blank"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
         </div>
-
         <div class="portfolio-box">
           <img src="images/learning.jpg" alt="" />
           <h3>Learning-Hub</h3>
@@ -431,7 +430,7 @@
               interactivity.
             </p>
             <a
-              href=" https://developerharshpanchal.github.io/trendsmart/"
+              href="https://developerharshpanchal.github.io/trendsmart/"
               target="_blank"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -447,7 +446,7 @@
               features, and interactive.
             </p>
             <a
-              href="Your site is live at https://developerharshpanchal.github.io/Amazon-clone/"
+              href="https://developerharshpanchal.github.io/Amazon-clone/"
               target="_blank"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -528,7 +527,7 @@
 
           <div class="input-field">
             <i class="fas fa-tag"></i>
-            <input type="text" name="subject" placeholder="Subject" required />
+            <input type="text" name="subject" placeholder="Subject" />
           </div>
 
           <div class="input-field textarea-field">
