--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
           <div class="portfolio-layer">
             <h4>Register-system</h4>
             <p>
-              Includes form data editing, deleting, and localStorage integration
-              for persistent data management.
+              Registration-system form data editing, deleting, and localStorage
+              integration.
             </p>
             <a
               href="https://developerharshpanchal.github.io/student-registration-system/"
