--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
           <div class="timeline-content">
             <h3>Master of Computer Applications</h3>
             <h4>SAGE University, Bhopal</h4>
-            <div class="calender"><h3>📅 2022–2024</h3></div>
+            <div class="calender">
+              <h3><i class="fas fa-calendar-alt"></i> 2022–2024</h3>
+            </div>
             <!-- <h3>📅 2022–2024</h3> -->
           </div>
         </div>
@@ -159,7 +161,9 @@
           <div class="timeline-content">
             <h3>Bachelor of Science (Computer Science)</h3>
             <h4>Technocrats Institute of Commerce & Sciences, Bhopal</h4>
-            <div class="calender"><h3>📅 2019–2022</h3></div>
+            <div class="calender">
+              <h3><i class="fas fa-calendar-alt"></i> 2019–2022</h3>
+            </div>
           </div>
         </div>
         <div class="timeline-item">
@@ -168,7 +172,9 @@
           <div class="timeline-content">
             <h3>H.S. Higher secondary School</h3>
             <h4>Board of secondary education, Madhya Pradesh</h4>
-            <div class="calender"><h3>📅 2018-2019</h3></div>
+            <div class="calender">
+              <h3><i class="fas fa-calendar-alt"></i> 2018-2019</h3>
+            </div>
           </div>
         </div>
         <div class="timeline-item">
@@ -177,7 +183,9 @@
           <div class="timeline-content">
             <h3>Gyanodaya SMVM secondary school</h3>
             <h4>Central Board of Secondary Education</h4>
-            <div class="calender"><h3>📅 2016</h3></div>
+            <div class="calender">
+              <h3><i class="fas fa-calendar-alt"></i> 2016</h3>
+            </div>
           </div>
         </div>
       </div>
