--- a/index.html
+++ b/index.html
@@ -34,44 +34,63 @@
     </header>
     <!-- home section design -->
     <section class="home" id="home">
-      <div class="home-content">
-        <h3>Hello, It's Me👋</h3>
-        <h1>Harsh Panchal</h1>
-        <h3><span class="multiple-text"></span></h3>
-        <p>
-          "Transforming Ideas into Reality, Crafting Seamless Digital
-          Experiences with Code and Creativity."
-        </p>
-        <div class="social-media">
-          <a href="https://www.linkedin.com/in/harsh-panchal-/" target="_blank"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
-          <a href="https://github.com/DeveloperHarshPanchal" target="_blank"
-            ><i class="bx bxl-github"></i
-          ></a>
-          <a href="https://www.facebook.com/harsh.panchal.98499" target="_blank"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a href="https://x.com/harshpanchal031" target="_blank"
-            ><i class="bx bxl-twitter"></i
-          ></a>
+   
+        <div class="home-content">
+          <h3>Hello, It's Me👋</h3>
+          <h1>Harsh Panchal</h1>
+          <h3><span class="multiple-text"></span></h3>
+          <p>
+            "Transforming Ideas into Reality, Crafting Seamless Digital
+            Experiences with Code and Creativity."
+          </p>
+          <div class="social-media">
+            <a
+              href="https://www.linkedin.com/in/harsh-panchal-/"
+              target="_blank"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
+            <a href="https://github.com/DeveloperHarshPanchal" target="_blank"
+              ><i class="bx bxl-github"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/harsh.panchal.98499"
+              target="_blank"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a href="https://x.com/harshpanchal031" target="_blank"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/harshpanchal_____?igsh=MXA3Z3I1ZnZnNDNrZQ=="
+              target="_blank"
+              ><i class="bx bxl-instagram-alt"></i
+            ></a>
+          </div>
           <a
-            href="https://www.instagram.com/harshpanchal_____?igsh=MXA3Z3I1ZnZnNDNrZQ=="
+            href="assets/_C.V.HarshPanchal.pdf"
             target="_blank"
-            ><i class="bx bxl-instagram-alt"></i
-          ></a>
+            class="btn"
+            id="downloadbtn"
+            >Download CV</a
+          >
         </div>
-        <a
-          href="assets/_C.V.HarshPanchal.pdf"
-          target="_blank"
-          class="btn"
-          id="downloadbtn"
-          >Download CV</a
-        >
-      </div>
 
-      <div class="home-img">
-        <img src="images/passport size.jpg" alt="" />
+        <div class="home-img">
+          <img src="images/passport size.jpg" alt="" />
+        </div>
+        <div class="box">
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>7</div>
+          <div>8</div>
+          <div>9</div>
+          <div>10</div>
+          <div>11</div>
+        </div>
       </div>
     </section>
 
